@@ -22,7 +22,6 @@ import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import org.polypheny.db.catalog.exceptions.GenericRuntimeException;
 import org.polypheny.db.type.entity.PolyBinary;
 import org.polypheny.db.type.entity.PolyBoolean;
@@ -50,7 +49,7 @@ public class PrismValueDeserializer {
     public static List<List<PolyValue>> deserializeParameterLists( List<IndexedParameters> parameterListsList ) {
         return transpose( parameterListsList.stream()
                 .map( parameterList -> deserializeParameterList( parameterList.getParametersList() ) )
-                .collect( Collectors.toList() ) );
+                .toList() );
     }
 
 
@@ -69,7 +68,7 @@ public class PrismValueDeserializer {
 
 
     public static List<PolyValue> deserializeParameterList( List<ProtoValue> valuesList ) {
-        return valuesList.stream().map( PrismValueDeserializer::deserializeProtoValue ).collect( Collectors.toList() );
+        return valuesList.stream().map( PrismValueDeserializer::deserializeProtoValue ).toList();
     }
 
 
@@ -123,7 +122,7 @@ public class PrismValueDeserializer {
     private static PolyValue deserializeToPolyList( ProtoValue protoValue ) {
         List<PolyValue> values = protoValue.getList().getValuesList().stream()
                 .map( PrismValueDeserializer::deserializeProtoValue )
-                .collect( Collectors.toList() );
+                .toList();
         return new PolyList<>( values );
     }
 
